# redditor

./: .gitignore  PROJECT_BRIEF.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.agents/: GITHUB_SECRETS_REQUIRED.md  upload_secrets.sh
.agents/docs/: architecture-decision.md  devvit-api-reference.md  devvit-quickstart.md  github-setup-summary.md  reddit-platforms-comparison.md
.github/workflows/: cd.yml  ci.yml
.seedgpt/: PRD.yml  agile-tdd-method.md  org-chart.yml  roadmap.yml  tech-stack.yml
.seedgpt/sprints/: sprint-v0.1.yml
devvit-app/: .gitignore  README.md  devvit.yaml  package-lock.json  package.json  tsconfig.json
devvit-app/src/: main.ts
devvit-app/src/services/: ai.ts  scheduler.ts
devvit-app/src/triggers/: comment-create.ts  post-submit.ts
devvit-app/src/types/: index.ts
src/redditor/: __init__.py  cli.py  config.py  main.py
src/redditor/pipelines/: __init__.py  base.py  registry.py
src/redditor/reddit/: __init__.py  client.py
tests/: conftest.py
tests/unit/: test_cli.py  test_package.py  test_pipeline.py  test_reddit_client.py
